--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -63,7 +63,7 @@ nav {
   }
 }
 // Make columns equal height
-@media (min-width: @screen-md-min) {
+@media (min-width: @screen-sm-min) {
   .row-equal-height {
     display: flex;
     flex-direction: row;
