--- a/less/panels.less
+++ b/less/panels.less
@@ -44,6 +44,7 @@
   font-weight: bold;
   letter-spacing: .25px;
   color: inherit;
+  overflow: hidden; //KU - only single line header
 
   > a,
   > small,
