--- a/less/type.less
+++ b/less/type.less
@@ -25,7 +25,8 @@ h1, .h1,
 h2, .h2,
 h3, .h3 {
   margin-top: @line-height-computed;
-  margin-bottom: (@line-height-computed / 2);
+  margin-bottom: 12px;
+  font-weight: 400;
 
   small,
   .small {
@@ -50,9 +51,9 @@ h1, .h1 {
  }
 h2, .h2 { font-size: @font-size-h2; }
 h3, .h3 { font-size: @font-size-h3; }
-h4, .h4 { font-size: @font-size-h4; }
-h5, .h5 { font-size: @font-size-h5; }
-h6, .h6 { font-size: @font-size-h6; }
+h4, .h4 { font-size: @font-size-h4; font-weight: 400; }
+h5, .h5 { font-size: @font-size-h5; font-weight: 700; }
+h6, .h6 { font-size: @font-size-h6; font-weight: 700; }
 
 
 // Body text
