--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -63,4 +63,5 @@
 @import "ku-bxslider.less";
 @import "ku-gridboxes.less";
 @import "ku-datatables.less";
+@import "ku-datetimepicker.less";
 @import "ku-misc.less";
