--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -122,7 +122,7 @@ img {
 // Horizontal rules
 
 hr {
-  margin-top:    @line-height-computed;
+  margin-top:    @margin10;
   margin-bottom: @line-height-computed;
   border: 0;
   border-top: 1px solid @hr-border;
