--- a/less/tables.less
+++ b/less/tables.less
@@ -112,7 +112,7 @@ th {
 
 .table-striped {
   > tbody > tr:nth-of-type(odd) {
-    background-color: @table-bg-accent;
+    background-color: @gray-lighter;
   }
 }
 
