--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -45,7 +45,8 @@
 <script>
   window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')
 </script>
-
+<!-- Bootstrap datetimepicker -->
+<script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 {% if page.slug == 'examples' %}
 <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
