--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -1,22 +1,26 @@
 //
 // Local footer
 // --------------------------------------------------
+
 .local-footer {
-    align-self: flex-end;
+  align-self: flex-end;
+
   > .row {
-      margin-top: @margin20;
-      margin-bottom: 10px;
+    margin-top: @margin20;
+    margin-bottom: 10px;
   }
+
   .footer-data {
-      text-align: right;
-       @media (max-width: @screen-sm) {
-           text-align: left;
-       }
+    text-align: right;
+    @media (max-width: @screen-sm) {
+      text-align: left;
+    }
   }
 }
 //
 // Global footer
 // --------------------------------------------------
+
 .globalfooter {
   position: relative;
   background: @gray-light;
@@ -30,82 +34,92 @@
   width: 100%;
   height: auto;
   overflow: hidden;
+
   .footercontent {
-    max-width: (@container-large-desktop - @grid-gutter-width);
-    width: 100%;
     margin: 0 auto;
-    padding: @grid-gutter-width (@grid-gutter-width / 2);
+    padding: @grid-gutter-width 0;
     position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+
+    > [class*="col-"] {
+      padding-left: 0;
+      z-index: 2;
+
+      &:last-child {
+        padding-right: 0;
+      }
+
+      &:first-child:before {
+        content: ' ';
+        display: block;
+        position: absolute;
+        z-index: -1;
+        top: -5px;
+        right: 55px;
+        left: auto;
+        bottom: 0;
+        width: 430px;
+        height: 430px;
+        opacity: 0.1;
+        background: url('../../images/footersegl.svg') no-repeat;
+        background-size: cover;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      .footer-heading {
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        font-weight: 700;
+        margin: 0;
+
+        a,
+        a:visited {
+          color: @white-color;
+        }
+
+        a:active,
+        a:focus,
+        a:hover {
+          color: #e2e2e2;
+        }
+
+        &:not(:first-child) {
+          margin-top: 20px;
+        }
+
+        &[data-heading='open'] {
+          margin-bottom: 3px;
+        }
+      }
+    }
   }
-  .footercolumn {
-    width: 30%;
-    margin-right: @grid-gutter-width;
-    float: left;
-    z-index: 2;
-    position: relative;
-    &:first-child:before {
-      content: ' ';
-      display: block;
-      position: absolute;
-      z-index: -1;
-      top: -5px;
-      right: 55px;
-      left: auto;
-      bottom: 0;
-      width: 430px;
-      height: 430px;
-      opacity: .1;
-      background: url('../../images/footersegl.svg') no-repeat;
-      background-size: cover;
-    }
-    &:last-child {
-      margin-right: 0;
-    }
-    .footer-heading {
-      font-size: 14px;
-      line-height: 18px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      font-weight: 700;
-      margin: 0;
-      a,
-      a:visited {
-        color: @white-color;
-      }
-      a:active,
-      a:focus,
-      a:hover {
-        color: #e2e2e2;
-      }
-      &:not(:first-child) {
-        margin-top: 20px;
-      }
-      &[data-heading='open'] {
-        margin-bottom: 3px;
-      }
-    }
-  }
+
   ul.footerlinks {
     list-style: none;
     padding-left: 0;
     margin: 2px 0 0;
     display: block;
+
     li {
       padding: 0;
       line-height: 20px;
       font-size: @font-size-base;
       font-weight: normal;
+
       a {
         color: @white-color;
         text-decoration: none;
+
         &:hover {
           text-decoration: none;
           color: #e2e2e2;
         }
       }
+
       .padlock:after {
         content: " ";
         background: url('../../images/padlock.svg') no-repeat;
@@ -119,11 +133,17 @@
       }
     }
   }
+
   .social-items {
     width: 80%;
+    @media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
+      width: 100%;
+    }
+
     .social-item {
       display: inline-block;
       margin: 0.5em 0.3em 0 0;
+
       .social-icon {
         width: 28px;
         height: 28px;
@@ -134,111 +154,135 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         &.facebook {
           background-image: url('../../images/social_icon_facebook.svg');
+
           &:hover {
             background-color: #3e5a98;
           }
         }
+
         &.instagram {
           background-image: url('../../images/social_icon_instagram.svg');
+
           &:hover {
             background-color: #3e5a98;
           }
         }
+
         &.twitter {
           background-image: url('../../images/social_icon_twitter.svg');
+
           &:hover {
             background-color: #2ca8df;
           }
         }
+
         &.app {
           background-image: url('../../images/social_icon_app.svg');
+
           &:hover {
             background-color: #901a1e;
           }
         }
+
         &.coursera {
           background-image: url('../../images/social_icon_coursera.svg');
+
           &:hover {
             background-color: #408bc9;
           }
         }
+
         &.futurity {
           background-image: url('../../images/social_icon_futurity.svg');
+
           &:hover {
             background-color: #f7ba20;
           }
         }
+
         &.ku_video {
           background-image: url('../../images/social_icon_ku_video.svg');
+
           &:hover {
             background-color: #439639;
           }
         }
+
         &.linkedin {
           background-image: url('../../images/social_icon_linkedin.svg');
+
           &:hover {
             background-color: #0078b6;
           }
         }
+
         &.rss {
           background-image: url('../../images/social_icon_rss.svg');
+
           &:hover {
             background-color: #f7941e;
           }
         }
+
         &.the_conversation {
           background-image: url('../../images/social_icon_the_conversation.svg');
+
           &:hover {
             background-color: #d7352a;
           }
         }
+
         &.vimeo {
           background-image: url('../../images/social_icon_vimeo.svg');
+
           &:hover {
             background-color: #d12223;
           }
         }
+
         &.youtube {
           background-image: url('../../images/social_icon_youtube.svg');
+
           &:hover {
             background-color: #d12223;
           }
         }
       }
     }
+
     .footer-heading {
       margin-top: 20px;
     }
   }
 }
-@media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
-  .globalfooter {
-    .footercontent {
-      padding: @grid-gutter-width @padding-large-vertical @padding-large-vertical
-    }
-    .social-items {
-      width: 100%;
-    }
-  }
-}
 @media (max-width: @screen-sm-min) {
   .globalfooter {
+    .container {
+      padding-right: 0;
+      padding-left: 0;
+    }
+
     .footercontent {
       width: 100%;
       display: block;
       padding: 0;
+
       &:after {
         content: none;
       }
+
       .footercolumn {
         width: 100%;
         float: none;
         padding: 0;
+
         &:first-child:before {
           display: none;
         }
+
         .footer-heading {
           font-weight: 700;
           font-size: @font-size-large;
@@ -246,16 +290,19 @@
           position: relative;
           padding: 12px 25px 12px 20px;
           margin-top: 0 !important;
+
           &[data-heading='open'] {
             cursor: default;
             padding-left: 0;
             padding-bottom: 8px;
             margin-bottom: 0;
+
             &:after,
             &:before {
               display: none;
             }
           }
+
           &[data-heading='toggle'] {
             + ul.footerlinks {
               display: none;
@@ -266,6 +313,7 @@
               transform: translate3d(0, 0, 0);
             }
           }
+
           &:before {
             position: absolute;
             bottom: 0;
@@ -277,6 +325,7 @@
             width: calc(100% + @margin10);
             margin-left: -@margin10;
           }
+
           &:after {
             font-family: @custom-icon-font-name;
             content: '\0043';
@@ -290,6 +339,7 @@
             transform: rotate(0deg) translate3d(0, 0, 0);
             transition: transform 0.4s ease-in-out;
           }
+
           &.open {
             &:after {
               transform: rotate(90deg) translate3d(0, 0, 0);
@@ -297,46 +347,54 @@
             }
           }
         }
-        ul.footerlinks {
 
-            li {
-              color: #4a4949;
-              font-weight: 400;
-              font-size: @font-size-large;
-              padding: 0;
-              position: relative;
-              a {
-                color: #606060;
-                padding: @padding-small-vertical @padding-large-horizontal;
-                display: block;
-                border-bottom: 1px solid @gray;
-                &:active,
-                &:focus {
-                  background-color: #cdcdcd;
-                }
-                &:hover {
-                  color: initial;
-                }
-                .padlock {
-                  &:after {
-                    display: none;
-                  }
-                }
+        ul.footerlinks {
+          li {
+            color: #4a4949;
+            font-weight: 400;
+            font-size: @font-size-large;
+            padding: 0;
+            position: relative;
+
+            a {
+              color: #606060;
+              padding: @padding-small-vertical @padding-large-horizontal;
+              display: block;
+              border-bottom: 1px solid @gray;
+
+              &:active,
+              &:focus {
+                background-color: #cdcdcd;
               }
-              &:last-child {
-                a {
-                  border-bottom: 0;
+
+              &:hover {
+                color: initial;
+              }
+
+              .padlock {
+                &:after {
+                  display: none;
                 }
               }
             }
+
+            &:last-child {
+              a {
+                border-bottom: 0;
+              }
+            }
+          }
         }
       }
     }
+
     .social-items {
       padding: 0 @padding-large-vertical @padding-large-vertical;
       width: 100%;
+
       .social-item {
         margin: 7px 16px 0 0;
+
         .social-icon {
           width: 35px;
           height: 35px;
